PAYMENT TYPES FIXED ALIGNMENT AND IMAGES

--- a/Event Market/css/main.css
+++ b/Event Market/css/main.css
@@ -336,15 +336,13 @@ margin-bottom: 30px;
 
 
 .pay-container input.radio{
-display: inline-block;
-width: 20%;
-padding: 0;
-margin: 0;
+width: 3%;
 }
 
 form img{
 height: 35px;
 width: auto;
+margin-right: 25px;
 }
 
 input#expire1{
@@ -361,7 +359,7 @@ width: 40%;
 form.card-type{
 display: inline-block;
 float: left;
-width: 20%;
+width: 100%;
 }
 
 .pay-title{
